Add secondary pages and black while css.

--- a/company.html
+++ b/company.html
@@ -15,10 +15,10 @@
                 </div>
                 <nav>
                 <ul>
-                    <li class="current">
+                    <li>
                         <a href="home.html">Αρχική</a>
                     </li>
-                    <li>
+                    <li class="current">
                         <a href="company.html">Το Γραφείο μας</a>
                     </li>
                     <li>
@@ -35,8 +35,14 @@
         
         <section id="showcase">
             <div class="container">
-                <h1>Καλώς ήρθατε!</h1>
-                <p>Επιχειρήσεις και πολίτες καθημερινά καλείστε να ακολουθήσετε το ευρωπαϊκό μοντέλο φορολογικής και εργατικής νομοθεσίας, αυξάνοντας την ανάγκη σας για εξειδικευμένες φοροτεχνικές και λογιστικές υπηρεσίες. Τις υπηρεσίες αυτές σας τις παρέχουμε γρήγορα, αποτελεσματικά, αξιόπιστα και εχέμυθα με βασική αρχή την ανταγωνιστικότητα των υπηρεσιών μας.</p>
+            <h1>ΤΟ ΓΡΑΦΕΙΟ ΜΑΣ</h1>
+            <p>Το γραφείο μας είναι μια οικογενειακή επιχείρηση που παρέχει τις υπηρεσίες του με εχεμύθεια, αξιοπιστία και συνεχή βελτίωση της ποιότητάς τους.
+            Έχοντας πάντα σαν αρχή την ανταγωνιστικότητα των υπηρεσιών μας, ενεργούμε εγκαίρως δίνοντάς σας τις απαιτούμενες συμβουλές, είτε είστε επιχείρηση είτε απλός φορολογούμενος.</p><br>
+
+            <p>Ο <b>Τσιούντζηρας Αθανάσιος</b>, εκ <a href="http://el.wikipedia.org/wiki/%CE%9C%CE%B5%CF%83%CE%B1%CE%AF%CE%B1_%CE%9A%CE%AC%CF%88%CE%B7_%CE%A6%CE%B8%CE%B9%CF%8E%CF%84%CE%B9%CE%B4%CE%B1%CF%82" target="_blank">Μεσαίας Κάψης</a> ορμώμενος, πτυχιούχος ΑΣΟΕΕ (1973-1978), ασκεί το επάγγελμα του λογιστή – φοροτέχνη από το  1974 όπου εργάσθηκε σε διάφορες εταιρείες ως λογιστής και από το 1980 ως ελεύθερος επαγγελματίας. Διαθέτει άδεια ασκήσεως επαγγέλματος Α τάξης.</p><br>
+
+            <p>Ο <b>Τσιούντζηρας Ιωάννης</b>, πτυχιούχος ΤΕΙ Λογιστικής, με άδεια ασκήσεως επαγγέλματος Γ τάξης.
+            Συνδυάζοντας την πείρα, την εμπειρία, την νεανική ενεργητικότητα και δίνοντας έμφαση στις νέες τεχνολογίες προσπαθούμε για την καλύτερη εξυπηρέτηση σας.</p>
             </div>
         </section>
         
