--- a/services.html
+++ b/services.html
@@ -15,13 +15,13 @@
                 </div>
                 <nav>
                 <ul>
-                    <li class="current">
+                    <li>
                         <a href="home.html">Αρχική</a>
                     </li>
                     <li>
                         <a href="company.html">Το Γραφείο μας</a>
                     </li>
-                    <li>
+                    <li class="current">
                         <a href="services.html">Υπηρεσίες</a>
                     </li>
                     <li>
@@ -35,8 +35,33 @@
         
         <section id="showcase">
             <div class="container">
-                <h1>Καλώς ήρθατε!</h1>
-                <p>Επιχειρήσεις και πολίτες καθημερινά καλείστε να ακολουθήσετε το ευρωπαϊκό μοντέλο φορολογικής και εργατικής νομοθεσίας, αυξάνοντας την ανάγκη σας για εξειδικευμένες φοροτεχνικές και λογιστικές υπηρεσίες. Τις υπηρεσίες αυτές σας τις παρέχουμε γρήγορα, αποτελεσματικά, αξιόπιστα και εχέμυθα με βασική αρχή την ανταγωνιστικότητα των υπηρεσιών μας.</p>
+                <h1>ΥΠΗΡΕΣΙΕΣ</h1>
+
+                <p>Ολοκληρωμένες λογιστικές υπηρεσίες στο γραφείο μας ή στην έδρα της επιχείρησης (χειρόγραφα ή μηχανογραφικά για όλες τις κατηγορίες βιβλίων). 
+                Οργάνωση, επίβλεψη και αναδιοργάνωση με σύγχρονα μέσα των λογιστηρίων. 
+                Εκπροσώπηση σε Δημόσιες Υπηρεσίες, Ασφαλιστικούς Οργανισμούς, Επιμελητήρια, κλπ.</p>
+
+                <h2>Διαχείριση Μισθοδοσίας</h2>
+                <p>Πλήρης τήρηση μισθοδοσίας επιχειρήσεων, (χειρόγραφη ή ηλεκτρονική)</p>
+                <ul>
+                    <li><p>Συμπλήρωση και υποβολή εντύπων του προσωπικού των επιχειρήσεων</p></li>
+                    <li><p>Έκδοση μισθοδοσίας και μισθοδοτικών καταστάσεων</p></li>
+                    <li><p>Έκδοση αποδείξεων πληρωμής προσωπικού</p></li>
+                    <li><p>Έκδοση προσωρινών και οριστικών καταστάσεων Φ.Μ.Υ.</p></li> 
+                    <li><p>Ενημέρωση και συμβουλές για την εργατική νομοθεσία</p></li>
+                </ul>
+                <h2>Φορολογικά θέματα</h2>
+
+                <p>Άμεση και έγκυρη ηλεκτρονική ενημέρωση των αλλαγών της φορολογικής νομοθεσίας</p>
+                <ul>
+                    <li><p>Φοροτεχνική υποστήριξη</p></li>
+                    <li><p>Σύνταξη φορολογικών δηλώσεων (ιδιωτών και επιχειρήσεων)</p></li> 
+                    <li><p>Σύνταξη και υποβολή φορολογικών εντύπων (ιδιωτών και επιχειρήσεων)</p></li>
+                    <li><p>Παροχή φορολογικών συμβουλών</p></li>
+                    <li><p>Εκπροσώπηση και διεκπεραίωση φορολογικών υποθέσεων</p></li>
+                    <li><p>Διεκπεραίωση φορολογικών ελέγχων και εκκρεμοτήτων</p></li>
+                    <li><p>Σύσταση, μετατροπή, συγχώνευση ή απορρόφηση και διακοπή επιχειρήσεων</p></li>
+                </ul>
             </div>
         </section>
         
